fix: clear button on mobile todo: test

--- a/src/modules/header/components/header.css
+++ b/src/modules/header/components/header.css
@@ -347,10 +347,12 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .is-portrait  .header__search{
   width:3.5em;
+  z-index:1;
   transition: all var(--animation-duration-large-open) var(--animation-easing-linea);  
 }
 .is-portrait  .header__search:focus {
   width: 100%;
+  z-index:0;
 }
 .is-tablet  .header__search{
   width:3.5em;
